--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,7 @@
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.0.0/howler.js"></script>
-  <script type="text/javascript" src="script.js"></script>
+  <script type="text/javascript" src="/js/script.js"></script>
   
   </body>
 </html>
